# ThermoSim

./: .gitignore  404.html  README.md  environment.yml  example.py  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
api/: index.html
calibrate_doc/: index.html
calibration/: index.html
docs/: api.md  calibrate_doc.md  calibration.md  index.md  installation.md  thermal_mapping.md
geometries/: ref_01.STL  ref_01.inp  ref_01.xdmf
installation/: index.html
materials/: base.md
notebooks/: comapre_fields.ipynb  data_io.ipynb  inverse_calibration_minimal.ipynb  lens_calib_checkerboard.ipynb  meshio.ipynb  plate_blind_hole_mesh.ipynb  plate_multi_blind_holes.ipynb  thermal_mapping.ipynb
scripts/: calculate.py  calibrate.py  mess_to_hdf5.py
scripts/fem-fenics/: calculate_stl.py  calculate_transient.py  optimize_transient.py
scripts/pre-processing/: create_unit_cube.py  mesh_stl.py
search/: search_index.json
src/thermosim/utils/: io.py
thermal_mapping/: index.html
thermosim/: pore_generator.py
